# crowpainter

./: .gitignore  README.md  build.py  flake.nix  main.py  pyproject.toml  setup.py
src/crowpainter/: blendfuncs.pyx  composite.py  constants.py  layer_data.py  main.py  qthreadpoolexecutor.py  util.py
src/crowpainter/file_io/: image.py  native.py  psd.py  rle.pyx  rle_native.pyx
tests/: test_rle_native.py
