[tool.poetry]
name = "crowpainter"
version = "0.0.0"
description = "Illustration and painting tool"
authors = ["cromachina"]
readme = "README.md"
license = "GPL-3.0-or-later"
packages = [{ include = "src/crowpainter" }]
keywords = ["art", "painting", "drawing", "illustration"]
classifiers = [
    'Intended Audience :: End Users/Desktop',
    'License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3 :: Only',
    'Topic :: Artistic Software',
    'Topic :: Multimedia :: Graphics',
]

[tool.poetry.dependencies]
python = "3.12.*"
cython = "*"
psutil = "*"
psd-tools = "*"
opencv-python = "*"
#numpy = "*"
pyrsistent = "*"
PySide6 = "*"

[tool.poetry.scripts]
crowpainter = 'src.crowpainter.main:main'

[build-system]
requires = ["poetry-core", "cython", "setuptools", "numpy"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.build]
generate-setup-file = false
script = 'build.py'