[build-system]
requires = ["setuptools", "wheel", "cython", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "crowpainter"
version = "0.0.0"
authors = [
    { name = "cromachina" }
]
license = "GPL-3.0-or-later"
description = "Illustration and painting tool"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cython",
    "psutil",
    "psd_tools",
    "opencv-python",
    "numpy",
    "pyrsistent",
    "PySide6"
]
keywords = ["art", "painting", "drawing", "illustration"]
classifiers = [
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Artistic Software",
    "Topic :: Multimedia :: Graphics",
]

[project.scripts]
crowpainter = 'crowpainter.main:main'

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
crowpainter = ["*.pyx"]
