[build-system]
requires = ["setuptools", "wheel", "cython", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "crowpainter"
version = "0.0.0"
authors = [
    { name = "cromachina" }
]
license = "GPL-3.0-or-later"
description = "Illustration and painting tool"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cython",
    "psutil",
    "psd-tools",
    "opencv-python",
    "numpy",
    "pyrsistent",
    "pyside6",
    "pyqt-toast-notification",
]
keywords = ["art", "painting", "drawing", "illustration"]
classifiers = [
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Artistic Software",
    "Topic :: Multimedia :: Graphics",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "viztracer",
]

[project.scripts]
crowpainter = "crowpainter.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
crowpainter = ["*.pyx"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = "src"
addopts = [
    "--import-mode=importlib",
]
